--- a/app/scss/components/_jquery.formstyler.scss
+++ b/app/scss/components/_jquery.formstyler.scss
@@ -34,17 +34,17 @@ $select-color: #333333;
 
 $trigger-arrow-bg:none;
 $trigger-border-width:6px;
-$trigger-arrow-color:#b3b5bd;
+$trigger-arrow-color:#333;
     
 $dropdown-bg:#FFF;
-$dropdown-border-width:0px;
+$dropdown-border-width:1px;
 $dropdown-border-color:#333333; 
 $dropdown-border-radius:0x; 
 $dropdown-shadow: 3px 3px 6px rgba(17, 48, 74, 0.1); 
 $dropdown-item-padding: 5px 13px 5px 13px;
 
 $dropdown-item-line-height:$select-line-height;
-$dropdown-item-active-bg:#034EA2;
+$dropdown-item-active-bg:#333;
 $dropdown-item-disbled-color:#ccc;
 $dropdown-item-disbled-bg:none;
 
@@ -146,7 +146,7 @@ $dropdown-item-disbled-bg:none;
 	border-radius: $select-border-radius;  
 	background: $select-bg;
 	line-height: $select-line-height;
-	color: #211d2d; 
+	color: #333; 
 	z-index: 1;
 	font-family:$base-font-family;
 	font-size:14px;   
@@ -175,18 +175,20 @@ $dropdown-item-disbled-bg:none;
 }
 .jq-selectbox__trigger-arrow {
 	position: absolute;
-	top: 23px;    
-	right: 19px;
+	top: 0px;    
+	right: 0;
+	width:100%; height:100%;
 	font-family: 'icomoon' !important;
 	font-style: normal;
     font-weight: normal;
     font-variant: normal;
     text-transform: none;
     line-height: 1;font-size: 7px;
-	&:before {content: "\e900";}
+	&:before {position:absolute; top:16px; right:10px; width:10px; height:1px; transform: rotate(45deg); content:''; background-color: #333333;}
+	&:after {position:absolute; top:16px; right:3px; width:10px; height:1px; transform: rotate(-45deg); content:''; background-color: #333333;}
 }
 
-.jq-selectbox.opened .jq-selectbox__trigger-arrow {   	transform: rotate(180deg); top: 24px;}
+.jq-selectbox.opened .jq-selectbox__trigger-arrow {   	transform: rotate(180deg);}
 .jq-selectbox.disabled .jq-selectbox__trigger-arrow {}
 .jq-selectbox__dropdown {   
 	top: 35px !important; bottom:auto;
@@ -232,6 +234,8 @@ $dropdown-item-disbled-bg:none;
 .jq-selectbox li {
 	min-height: 18px;
 	padding:$dropdown-item-padding;
+	border-bottom:1px solid #838383;
+	&:last-child{border: none;}
 	 
 }
 .jq-selectbox li:hover {  
