--- a/app/scss/layout/_header.scss
+++ b/app/scss/layout/_header.scss
@@ -6,18 +6,20 @@
 */
 .header {
 	width:100%; 
-	padding:12px 0;
+	padding:7px 0;
 	order: 1;	
     -webkit-order: 1;
 	z-index: 150; 
 	box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 	.header_cont{display:flex; justify-content: space-between;}     
 }   
-.logo{font-size:22px; font-weight:700; text-transform: uppercase; align-items: flex-start;
+.logo{font-size:22px; font-weight:700; text-transform: uppercase; align-items: flex-start; letter-spacing: 0.04em;
 	.logo_link{text-decoration: none; border:none;}
 }
-.hedright{align-items: flex-end;  display:flex;
-	.login,.like,.basket{margin: 0 33px; font-size:12px;}
+.hedright{align-items: flex-end;  display:flex;     margin: 0 8px 3px 0px;
+	.login,.like,.basket{margin: 0 16px; font-size:16px;
+		a{text-decoration: none;}
+	}
 	.basket{margin-right:0;}
 }
 /* */ 
